--- a/package.json
+++ b/package.json
@@ -11,8 +11,7 @@
     "contentlayer:build": "contentlayer build",
     "shadcn:add": "pnpm dlx shadcn-ui@latest add",
     "typecheck": "contentlayer build && tsc --noEmit",
-    "format:write": "prettier --write \"**/*.{ts,tsx,mdx}\" --cache",
-    "format:check": "prettier --check \"**/*.{ts,tsx,mdx}\" --cache",
+    "prettier-check": "prettier --check .",
     "lint": "next lint",
     "lint:fix": "next lint --fix"
   },
@@ -55,6 +54,7 @@
     "@react-email/components": "^0.0.7",
     "@react-email/tailwind": "0.0.8",
     "@t3-oss/env-nextjs": "^0.6.0",
+    "@tailwindcss/typography": "^0.5.10",
     "@tanstack/match-sorter-utils": "^8.8.4",
     "@tanstack/react-table": "^8.9.3",
     "@uploadthing/react": "^5.2.0",
@@ -92,7 +92,7 @@
     "sonner": "^0.6.2",
     "stripe": "^12.14.0",
     "tailwind-merge": "^1.14.0",
-    "tailwindcss-animate": "^1.0.6",
+    "tailwindcss-animate": "^1.0.7",
     "unstyled-table": "0.0.3-alpha-3",
     "uploadthing": "^5.2.1",
     "vaul": "^0.9.0",
@@ -112,6 +112,8 @@
     "@typescript-eslint/parser": "^6.1.0",
     "autoprefixer": "^10.4.14",
     "dotenv": "^16.3.1",
+    "eslint": "^8.56.0",
+    "eslint-config-next": "^14.1.0",
     "jest": "^29.6.2",
     "jest-environment-jsdom": "^29.6.2",
     "postcss": "^8.4.27",
