--- a/package.json
+++ b/package.json
@@ -114,6 +114,7 @@
     "dotenv": "^16.3.1",
     "eslint": "^8.56.0",
     "eslint-config-next": "^14.1.0",
+    "identity-obj-proxy": "^3.0.0",
     "jest": "^29.6.2",
     "jest-environment-jsdom": "^29.6.2",
     "postcss": "^8.4.27",
