--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     "next-themes": "^0.2.1",
     "openai": "3.1.0",
     "react": "18.2.0",
+    "react-content-font": "^1.0.1",
     "react-cropper": "^2.3.3",
     "react-day-picker": "^8.10.0",
     "react-dom": "18.2.0",
