--- a/.env
+++ b/.env
@@ -1,3 +1,20 @@
+# Sample .env file
+
 # Use the production URL when deploying to production
 NEXT_PUBLIC_APP_URL="http://localhost:3000"
+
+# Clerk Auth
+NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=
+CLERK_SECRET_KEY=
+
+# Database Configs 
+DATABASE_URL=
+POSTGRES_DATABASE=
+POSTGRES_HOST=
+POSTGRES_PASSWORD=
+POSTGRES_PRISMA_URL=
+POSTGRES_URL=
+POSTGRES_URL_NON_POOLING=
+POSTGRES_USER=
+
 
