--- a/package.json
+++ b/package.json
@@ -15,14 +15,20 @@
     "lint": "next lint",
     "lint:fix": "next lint --fix"
   },
+  "prisma": {
+    "seed": "ts-node prisma/seed.ts"
+  },
   "keywords": [],
   "author": "ktroach",
   "license": "MIT",
   "dependencies": {
     "@clerk/nextjs": "^4.27.2",
     "@clerk/themes": "^1.7.9",
+    "@faker-js/faker": "^8.4.1",
     "@hookform/resolvers": "^3.3.4",
+    "@ngneat/falso": "^7.2.0",
     "@planetscale/database": "^1.8.0",
+    "@prisma/client": "^5.10.2",
     "@radix-ui/react-accordion": "^1.1.2",
     "@radix-ui/react-alert-dialog": "^1.0.5",
     "@radix-ui/react-aspect-ratio": "^1.0.3",
@@ -57,8 +63,10 @@
     "@tailwindcss/typography": "^0.5.10",
     "@tanstack/match-sorter-utils": "^8.8.4",
     "@tanstack/react-table": "^8.9.3",
+    "@types/bcryptjs": "^2.4.6",
     "@uploadthing/react": "^5.2.0",
     "@vercel/og": "^0.5.9",
+    "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "cmdk": "^0.2.1",
@@ -77,7 +85,6 @@
     "next-themes": "^0.2.1",
     "openai": "3.1.0",
     "react": "18.2.0",
-    "react-content-font": "^1.0.1",
     "react-cropper": "^2.3.3",
     "react-day-picker": "^8.10.0",
     "react-dom": "18.2.0",
@@ -88,12 +95,16 @@
     "react-medium-image-zoom": "^5.1.6",
     "react-resizable-panels": "^2.0.8",
     "react-wrap-balancer": "^1.0.0",
+    "rehype-pretty-code": "^0.13.0",
+    "rehype-slug": "^6.0.0",
+    "remark-gfm": "^4.0.0",
     "resend": "^0.17.1",
     "shiki": "0.x",
     "sonner": "^0.6.2",
     "stripe": "^12.14.0",
     "tailwind-merge": "^1.14.0",
     "tailwindcss-animate": "^1.0.7",
+    "ts-node": "^10.9.2",
     "unstyled-table": "0.0.3-alpha-3",
     "uploadthing": "^5.2.1",
     "vaul": "^0.9.0",
@@ -121,6 +132,7 @@
     "postcss": "^8.4.27",
     "prettier": "^3.0.0",
     "prettier-plugin-tailwindcss": "^0.4.1",
+    "prisma": "^5.10.1",
     "tailwindcss": "^3.3.3",
     "ts-jest": "^29.1.1",
     "typescript": "^5.3.2"
