--- a/package.json
+++ b/package.json
@@ -63,6 +63,9 @@
     "@tailwindcss/typography": "^0.5.10",
     "@tanstack/match-sorter-utils": "^8.8.4",
     "@tanstack/react-table": "^8.9.3",
+    "@tsparticles/engine": "^3.2.2",
+    "@tsparticles/react": "^3.0.0",
+    "@tsparticles/slim": "^3.2.2",
     "@types/bcryptjs": "^2.4.6",
     "@uploadthing/react": "^5.2.0",
     "@vercel/og": "^0.5.9",
@@ -75,6 +78,7 @@
     "date-fns": "^2.30.0",
     "dayjs": "^1.11.9",
     "embla-carousel-react": "8.0.0-rc11",
+    "framer-motion": "^11.0.6",
     "jspdf": "^2.5.1",
     "jspdf-autotable": "^3.5.31",
     "lodash": "4.17.21",
