--- a/package.json
+++ b/package.json
@@ -104,6 +104,7 @@
     "remark-gfm": "^4.0.0",
     "resend": "^0.17.1",
     "shiki": "0.x",
+    "simplex-noise": "^4.0.1",
     "sonner": "^0.6.2",
     "stripe": "^12.14.0",
     "tailwind-merge": "^1.14.0",
