--- a/package.json
+++ b/package.json
@@ -62,11 +62,17 @@
     "@t3-oss/env-nextjs": "^0.6.0",
     "@tailwindcss/typography": "^0.5.10",
     "@tanstack/match-sorter-utils": "^8.8.4",
+    "@tanstack/react-query": "^5.24.1",
     "@tanstack/react-table": "^8.9.3",
+    "@trpc/client": "^10.45.1",
+    "@trpc/next": "^10.45.1",
+    "@trpc/react-query": "^10.45.1",
+    "@trpc/server": "^10.45.1",
     "@tsparticles/engine": "^3.2.2",
     "@tsparticles/react": "^3.0.0",
     "@tsparticles/slim": "^3.2.2",
     "@types/bcryptjs": "^2.4.6",
+    "@types/lodash-es": "^4.17.12",
     "@uploadthing/react": "^5.2.0",
     "@vercel/og": "^0.5.9",
     "bcryptjs": "^2.4.3",
@@ -82,6 +88,7 @@
     "jspdf": "^2.5.1",
     "jspdf-autotable": "^3.5.31",
     "lodash": "4.17.21",
+    "lodash-es": "^4.17.21",
     "lucide-react": "^0.263.0",
     "md-editor-rt": "^4.6.1",
     "next": "14.0.4-canary.36",
@@ -107,6 +114,7 @@
     "simplex-noise": "^4.0.1",
     "sonner": "^0.6.2",
     "stripe": "^12.14.0",
+    "superjson": "^2.2.1",
     "tailwind-merge": "^1.14.0",
     "tailwindcss-animate": "^1.0.7",
     "ts-node": "^10.9.2",
