--- a/.env.sample
+++ b/.env.sample
@@ -1,20 +1,22 @@
 # Sample .env file
-
 # Use the production URL when deploying to production
 NEXT_PUBLIC_APP_URL="http://localhost:3000"
 
-# Clerk Auth
-NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=
-CLERK_SECRET_KEY=
-
-# Database Configs 
-DATABASE_URL=
-POSTGRES_DATABASE=
-POSTGRES_HOST=
-POSTGRES_PASSWORD=
-POSTGRES_PRISMA_URL=
+# DB Settings
 POSTGRES_URL=
+POSTGRES_PRISMA_URL=
+POSTGRES_URL_NO_SSL=
 POSTGRES_URL_NON_POOLING=
 POSTGRES_USER=
+POSTGRES_HOST=
+POSTGRES_PASSWORD=
+POSTGRES_DATABASE=
+DATABASE_URL=
+
+# Clerk Auth
+# pk_test, and sk_test are development keys
+# For production, use pk_live, and sk_live keys (a domain is required)
+NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=
+CLERK_SECRET_KEY=
 
 
