--- a/.gitignore
+++ b/.gitignore
@@ -23,11 +23,10 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-# local env files
-*.env
-*.env.local
-*.env.staging
-*.env.prod
+# env files
+.env*.local
+.env*
+!**.env.sample
 
 # vercel
 .vercel
