--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "lint:fix": "next lint --fix"
   },
   "prisma": {
-    "seed": "ts-node prisma/seed.ts"
+    "seed": "ts-node --transpile-only prisma/seed.ts"
   },
   "keywords": [],
   "author": "ktroach",
@@ -118,6 +118,7 @@
     "tailwind-merge": "^1.14.0",
     "tailwindcss-animate": "^1.0.7",
     "ts-node": "^10.9.2",
+    "tsx": "^4.7.1",
     "unstyled-table": "0.0.3-alpha-3",
     "uploadthing": "^5.2.1",
     "vaul": "^0.9.0",
