--- a/.env
+++ b/.env
@@ -1,22 +1,19 @@
-# Sample .env file
 # Use the production URL when deploying to production
 NEXT_PUBLIC_APP_URL="http://localhost:3000"
 
 # DB Settings
-POSTGRES_URL=
-POSTGRES_PRISMA_URL=
-POSTGRES_URL_NO_SSL=
-POSTGRES_URL_NON_POOLING=
-POSTGRES_USER=
-POSTGRES_HOST=
-POSTGRES_PASSWORD=
-POSTGRES_DATABASE=
-DATABASE_URL=
+POSTGRES_URL="postgres://default:kFPj7zMxu9Aw@ep-curly-meadow-a436x72k-pooler.us-east-1.aws.neon.tech:5432/verceldb?sslmode=require"
+POSTGRES_PRISMA_URL="postgres://default:kFPj7zMxu9Aw@ep-curly-meadow-a436x72k-pooler.us-east-1.aws.neon.tech:5432/verceldb?sslmode=require&pgbouncer=true&connect_timeout=15"
+POSTGRES_URL_NO_SSL="postgres://default:kFPj7zMxu9Aw@ep-curly-meadow-a436x72k-pooler.us-east-1.aws.neon.tech:5432/verceldb"
+POSTGRES_URL_NON_POOLING="postgres://default:kFPj7zMxu9Aw@ep-curly-meadow-a436x72k.us-east-1.aws.neon.tech:5432/verceldb?sslmode=require"
+POSTGRES_USER="default"
+POSTGRES_HOST="ep-curly-meadow-a436x72k-pooler.us-east-1.aws.neon.tech"
+POSTGRES_PASSWORD="kFPj7zMxu9Aw"
+POSTGRES_DATABASE="verceldb"
+DATABASE_URL="postgres://default:kFPj7zMxu9Aw@ep-curly-meadow-a436x72k.us-east-1.aws.neon.tech:5432/verceldb?sslmode=require"
 
 # Clerk Auth
 # pk_test, and sk_test are development keys
 # For production, use pk_live, and sk_live keys (a domain is required)
-NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=
-CLERK_SECRET_KEY=
-
-
+NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY="pk_test_Y3Jpc3AtaGFtc3Rlci01LmNsZXJrLmFjY291bnRzLmRldiQ"
+CLERK_SECRET_KEY="sk_test_JjtU3O2TWjfAJhBisJYbxIdd9qCM2Bxq5nPCZNF5uH"
