--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
     "@tsparticles/slim": "^3.2.2",
     "@types/bcryptjs": "^2.4.6",
     "@types/lodash-es": "^4.17.12",
+    "@types/uuid": "^9.0.8",
     "@uploadthing/react": "^5.2.0",
     "@vercel/og": "^0.5.9",
     "bcryptjs": "^2.4.3",
@@ -121,6 +122,7 @@
     "tsx": "^4.7.1",
     "unstyled-table": "0.0.3-alpha-3",
     "uploadthing": "^5.2.1",
+    "uuid": "^9.0.1",
     "vaul": "^0.9.0",
     "zod": "^3.22.4"
   },
