--- a/package.json
+++ b/package.json
@@ -62,7 +62,7 @@
     "@t3-oss/env-nextjs": "^0.6.0",
     "@tailwindcss/typography": "^0.5.10",
     "@tanstack/match-sorter-utils": "^8.8.4",
-    "@tanstack/react-query": "^5.24.1",
+    "@tanstack/react-query": "4.36.1",
     "@tanstack/react-table": "^8.9.3",
     "@trpc/client": "^10.45.1",
     "@trpc/next": "^10.45.1",
@@ -86,6 +86,8 @@
     "dayjs": "^1.11.9",
     "embla-carousel-react": "8.0.0-rc11",
     "framer-motion": "^11.0.6",
+    "jotai": "^2.7.0",
+    "jotai-devtools": "^0.8.0",
     "jspdf": "^2.5.1",
     "jspdf-autotable": "^3.5.31",
     "lodash": "4.17.21",
@@ -120,11 +122,13 @@
     "tailwindcss-animate": "^1.0.7",
     "ts-node": "^10.9.2",
     "tsx": "^4.7.1",
+    "unique-username-generator": "^1.3.0",
     "unstyled-table": "0.0.3-alpha-3",
     "uploadthing": "^5.2.1",
     "uuid": "^9.0.1",
     "vaul": "^0.9.0",
-    "zod": "^3.22.4"
+    "zod": "^3.22.4",
+    "zustand": "4.3.7"
   },
   "devDependencies": {
     "@clerk/types": "^3.58.0",
