--- a/.env
+++ b/.env
@@ -1,14 +1,9 @@
-# Sample .env file
 # Use the production URL when deploying to production
 NEXT_PUBLIC_APP_URL="http://localhost:3000"
 
 # DB Settings
-DATABASE_URL=
+DATABASE_URL="postgres://default:kFPj7zMxu9Aw@ep-curly-meadow-a436x72k.us-east-1.aws.neon.tech:5432/verceldb?sslmode=require"
 
-# Clerk Auth
-# pk_test, and sk_test are development keys
-# For production, use pk_live, and sk_live keys (a domain is required)
-NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=
-CLERK_SECRET_KEY=
-
-
+# Clerk Dev Keys
+NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY="pk_test_Y3Jpc3AtaGFtc3Rlci01LmNsZXJrLmFjY291bnRzLmRldiQ"
+CLERK_SECRET_KEY="sk_test_JjtU3O2TWjfAJhBisJYbxIdd9qCM2Bxq5nPCZNF5uH"
