--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
     "@types/bcryptjs": "^2.4.6",
     "@types/lodash-es": "^4.17.12",
     "@types/uuid": "^9.0.8",
+    "@uiw/react-md-editor": "^4.0.4",
     "@uploadthing/react": "^5.2.0",
     "@vercel/og": "^0.5.9",
     "bcryptjs": "^2.4.3",
