--- a/.env
+++ b/.env
@@ -10,3 +10,7 @@ DATABASE_URL=
 # For production, use pk_live, and sk_live keys (a domain is required)
 NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=
 CLERK_SECRET_KEY=
+
+# Email Provider(s)
+NEXT_PUBLIC_REACT_EMAIL_URL=
+NEXT_PUBLIC_RESEND_API_KEY=
