--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "prettier-check": "prettier --check .",
     "lint": "next lint",
     "lint:fix": "next lint --fix",
-    "gen-lic": "npx license-generator install mit -y 2024 -n \"Kyle Roach\" -e txt" 
+    "gen-lic": "npx license-generator install mit -y 2024 -n \"Kyle Roach\" -e txt"
   },
   "prisma": {
     "seed": "ts-node --transpile-only prisma/seed.ts"
@@ -98,10 +98,11 @@
     "lodash-es": "^4.17.21",
     "lucide-react": "^0.263.0",
     "md-editor-rt": "^4.6.1",
+    "msr": "^1.3.4",
     "next": "^14.1.1",
     "next-contentlayer": "latest",
     "next-themes": "^0.2.1",
-    "openai": "3.1.0",
+    "openai": "^4.29.2",
     "react": "18.2.0",
     "react-cropper": "^2.3.3",
     "react-day-picker": "^8.10.0",
@@ -111,6 +112,7 @@
     "react-hook-form": "^7.50.1",
     "react-markdown": "8.0.0",
     "react-medium-image-zoom": "^5.1.6",
+    "react-mic": "^12.4.6",
     "react-resizable-panels": "^2.0.8",
     "react-wrap-balancer": "^1.0.0",
     "rehype-pretty-code": "^0.13.0",
@@ -126,6 +128,7 @@
     "tailwindcss-animate": "^1.0.7",
     "ts-node": "^10.9.2",
     "tsx": "^4.7.1",
+    "unique-filename": "^3.0.0",
     "unique-username-generator": "^1.3.0",
     "unstyled-table": "0.0.3-alpha-3",
     "uploadthing": "^5.2.1",
@@ -144,6 +147,7 @@
     "@types/prettier": "^2.7.3",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
+    "@types/react-mic": "^12.4.6",
     "@typescript-eslint/eslint-plugin": "^6.1.0",
     "@typescript-eslint/parser": "^6.1.0",
     "autoprefixer": "^10.4.14",
