--- a/package.json
+++ b/package.json
@@ -103,6 +103,7 @@
     "next-contentlayer": "latest",
     "next-themes": "^0.2.1",
     "openai": "^4.29.2",
+    "postgres": "^3.4.3",
     "react": "18.2.0",
     "react-cropper": "^2.3.3",
     "react-day-picker": "^8.10.0",
