--- a/package.json
+++ b/package.json
@@ -165,5 +165,9 @@
     "tailwindcss": "^3.3.3",
     "ts-jest": "^29.1.1",
     "typescript": "^5.3.2"
-  }
+  },
+    "browser": {
+      "crypto": false,
+      "stream": false
+  }  
 }
