--- a/package.json
+++ b/package.json
@@ -4,9 +4,7 @@
   "description": "",
   "scripts": {
     "dev": "next",
-    "build": "next build",
-    "prebuild": "echo Press CTRL-C to cancel",
-    "postbuild": "npx prisma generate",
+    "build": "next build && npx prisma generate",
     "start": "next start",
     "test": "jest --silent",
     "contentlayer:dev": "contentlayer dev",
