removing unused code

--- a/.env
+++ b/.env
@@ -1,16 +1,13 @@
-# Sample .env file
 # Use the production URL when deploying to production
 NEXT_PUBLIC_APP_URL="http://localhost:3000"
 
 # DB Settings
-DATABASE_URL=
+DATABASE_URL="postgres://default:kFPj7zMxu9Aw@ep-curly-meadow-a436x72k.us-east-1.aws.neon.tech:5432/verceldb?sslmode=require"
 
-# Clerk Auth
-# pk_test, and sk_test are development keys
-# For production, use pk_live, and sk_live keys (a domain is required)
-NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=
-CLERK_SECRET_KEY=
+# Clerk Dev Keys
+NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY="pk_test_Y3Jpc3AtaGFtc3Rlci01LmNsZXJrLmFjY291bnRzLmRldiQ"
+CLERK_SECRET_KEY="sk_test_JjtU3O2TWjfAJhBisJYbxIdd9qCM2Bxq5nPCZNF5uH"
 
-# Email Provider(s)
-NEXT_PUBLIC_REACT_EMAIL_URL=
-NEXT_PUBLIC_RESEND_API_KEY=
+NEXT_PUBLIC_REACT_EMAIL_URL="https://react.email/api/send/test"
+NEXT_PUBLIC_RESEND_API_KEY="re_bYwyG5c4_4pS9pJDaHTgxL6dfGPDVA5da"
+
