--- a/package.json
+++ b/package.json
@@ -90,7 +90,8 @@
     "date-fns": "^2.30.0",
     "dayjs": "^1.11.9",
     "deep-email-validator": "^0.1.21",
-    "embla-carousel-react": "8.0.0-rc11",
+    "embla-carousel-autoplay": "^8.0.4",
+    "embla-carousel-react": "^8.0.0-rc11",
     "framer-motion": "^11.0.6",
     "html-react-parser": "^5.1.10",
     "jspdf": "^2.5.1",
@@ -119,6 +120,7 @@
     "react-mic": "^12.4.6",
     "react-resizable-panels": "^2.0.8",
     "react-wrap-balancer": "^1.0.0",
+    "recharts": "^2.12.7",
     "rehype-pretty-code": "^0.13.0",
     "rehype-slug": "^6.0.0",
     "remark-gfm": "^4.0.0",
