--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "@radix-ui/react-toggle": "^1.0.3",
     "@radix-ui/react-toggle-group": "^1.0.4",
     "@radix-ui/react-tooltip": "^1.0.7",
+    "@radix-ui/themes": "^3.0.5",
     "@react-email/components": "^0.0.7",
     "@react-email/tailwind": "0.0.8",
     "@t3-oss/env-nextjs": "^0.6.0",
