--- a/package.json
+++ b/package.json
@@ -112,6 +112,8 @@
     "react": "18.2.0",
     "react-cropper": "^2.3.3",
     "react-day-picker": "^8.10.0",
+    "react-dnd": "^16.0.1",
+    "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "18.2.0",
     "react-dropzone": "^14.2.3",
     "react-email": "^1.9.4",
@@ -119,6 +121,7 @@
     "react-markdown": "8.0.0",
     "react-medium-image-zoom": "^5.1.6",
     "react-mic": "^12.4.6",
+    "react-resizable": "^3.0.5",
     "react-resizable-panels": "^2.0.8",
     "react-wrap-balancer": "^1.0.0",
     "recharts": "^2.12.7",
@@ -155,6 +158,7 @@
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
     "@types/react-mic": "^12.4.6",
+    "@types/react-resizable": "^3.0.7",
     "@typescript-eslint/eslint-plugin": "^6.1.0",
     "@typescript-eslint/parser": "^6.1.0",
     "autoprefixer": "^10.4.14",
