--- a/package.json
+++ b/package.json
@@ -95,6 +95,7 @@
     "embla-carousel-react": "^8.0.0-rc11",
     "framer-motion": "^11.0.6",
     "html-react-parser": "^5.1.10",
+    "immutability-helper": "^3.1.1",
     "jspdf": "^2.5.1",
     "jspdf-autotable": "^3.5.31",
     "license-generator": "^0.0.13",
